# BigDataPostgreSql

./: CMakeLists.txt  GenerateDB.cpp  Makefile  README.md  SqlDataBase.cpp  SqlDataBase.h  Utils.cpp  Utils.h  csvfile.cpp  data.h  datetime.cpp  datetime.h  libjson.cpp  libjson.h  log2.txt  logger.cpp  logger.h  main.cpp  sql_script_18-04-2023 14-32-01.sql  sql_script_18-04-2023 14-41-17.sql  sql_script_19-04-2023 11-50-01.sql  sql_script_del__18-04-2023 14-41-17.sql  sql_script_del__19-04-2023 11-50-02.sql
tables/: ActionTime.json  Annigilation.json  DevPart.json  Material.json  Remission.json  SvodkaData.json
vartab/: ActionTime  Annigilation  DevPart  Material  Remission  SvodkaData
